--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@discordjs/voice": "^0.16.1",
     "@magicyan/discord": "^1.0.16",
     "chalk": "^4.1.2",
     "consola": "^3.2.3",
@@ -29,6 +30,9 @@
     "dotenv": "^16.3.1",
     "eslint": "^8.56.0",
     "fast-glob": "^3.3.2",
-    "tslib": "^2.6.2"
+    "ffmpeg-static": "^5.2.0",
+    "libsodium-wrappers": "^0.7.13",
+    "tslib": "^2.6.2",
+    "ytdl-core": "^4.11.5"
   }
 }
